# KamaCache

./: CMakeLists.txt  KICachePolicy.h  KLfuCache.h  KLruCache.h  KamaCache 缓存池项目.md  README.md  testAllCachePolicy.cpp  新旧ARC对比.txt
KArcCache/: KArcCache.h  KArcCacheNode.h  KArcLfuPart.h  KArcLruPart.h
